<resources>
    <string name="phone_valid_intro">SafeDoktor will send a one time SMS message to verify your phone number. Enter the <b>6-digit code</b> below</string>
    <string name="app_name">SafeDoktor 2</string>
    <string name="adverts">Advertisements</string>
    <string name="chad">Comm. Health Desk</string>
    <string name="reg_text">Don\'t have an account? <u><b>Sign Up</b></u></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="app_logo">SafeDoktor logo</string>
    <string name="pass_reset"><u>Forgot Password?</u></string>
    <string name="firstname">First Name</string>
    <string name="Lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="email_opt">Email Address (Optional)</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="dob">Date Of Birth</string>
    <string name="conf_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="verifyCode">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="header_arrow">header drop down arrow</string>
    <string name="header_background">header background image</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="appointments_txt">Appointments</string>
    <string name="medical_records_txt">MEDICAL RECORDS</string>
    <string name="online_medical_records_txt">Online Visits</string>
    <string name="clinic_visit_medical_records_txt">Clinical Visits</string>
    <string name="vitalstatistics_txt">Vital Statistics</string>
    <string name="to_do">TO DO</string>
    <string name="reminder_txt">Reminders</string>
    <string name="referral_txt">Referrals</string>
    <string name="information_txt">INFORMATION</string>
    <string name="health_posts_txt">Health Library</string>
    <string name="first_aid_txt">First Aid</string>
    <string name="lbl_community">COMMUNITY</string>
    <string name="lbl_chatroom">Chat Room</string>
    <string name="lbl_partners">PARTNERS</string>
    <string name="lbl_hospitals">Hospitals</string>
    <string name="lbl_pharmacies">Pharmacies</string>
    <string name="lbl_diagnostic">Diagnostic Centers</string>
    <string name="lbl_specialists">Specialists</string>
    <string name="mainPagepic">Dashboard pic</string>
    <string name="app_slogan">The Future Of Better Medical Care</string>
    <string name="no_internet_connection_txt">No Internet Connection</string>
    <string name="settings_txt">Settings</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="set_pic">Set Account Profile picture</string>
    <string name="resend_code_in">Resend Code in: 0:</string>
    <string name="dash_welcome">Welcome</string>
    <string name="developer_name">Jedidiah Assisi</string>
    <string name="main_icon_desc">dashboard icons</string>
    <string name="dash_appointments">Appointments</string>
    <string name="appointment_desc">Commence booking process and access previous records</string>
    <string name="dash_online_visits">Online Visits</string>
    <string name="online_visit_desc">Notes and reviews of consultations</string>
    <string name="dash_clinical_visits">Clinical Visits</string>
    <string name="clinical_visits_desc">Health facility referral history</string>
    <string name="dash_reminders">Reminders</string>
    <string name="reminders_desc">Toggle alerts for booked appointments</string>
    <string name="numb7">7</string>
    <string name="dash_health_library">Health Library</string>
    <string name="health_lib_desc">Information hub</string>
    <string name="dash_first_aid">First Aid</string>
    <string name="first_aid_desc">Signs and symptoms of everyday occurrences</string>
    <string name="library">Library</string>
    <string name="chat">Chats</string>
    <string name="partners">Partners</string>
    <string name="dob_txt">Date Of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="terms_and_privacy">"By clicking <b>\"Submit\"</b> You agree to our \n <u><![CDATA[Terms of Service & Privacy Policy]]></u>"</string>
    <string name="password">Password</string>
    <string name="login_logo_pic">Main app icon</string>
    <string name="phone_email">Phone or Email</string>
    <string name="register_txt"><u>Register Here</u></string>
    <string name="reg_qn">Dont have an account?</string>
    <string name="accept_pic">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="logging_in">Logging in…</string>
    <string name="verifying">Verifying…</string>
    <string name="creating_account">Creating Account…</string>
    <string name="reset_intro">Enter the email address associated with your account</string>
    <string name="reset_action">We will send you a link to reset your password</string>
    <string name="send">Send</string>
    <string name="developer_full_number">+233547779429</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="notifications">Notifications</string>
    <string name="app_info_desc"><![CDATA[App Version, Policies, Terms & Conditions]]></string>
    <string name="toggle_txt">Toggle App Alerts</string>
    <string name="biography">Biography</string>
    <string name="contact_persons">Contact Persons</string>
    <string name="next_of_kins">Next of Kins</string>
    <string name="medications">Medications</string>
    <string name="medical_history">Medical History</string>
    <string name="account">Account</string>
    <string name="change_number">Change Phone Number</string>
    <string name="change_pass">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="new_pass">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="auth_instruct">To safeguard your account and confirm your identity, please re-enter your account password.</string>
    <string name="blood_group_txt">Blood group</string>
    <string name="height_cm">Height(cm)</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="save">Save</string>
    <string name="basic_info_txt">Basic Information</string>
    <string name="address">Address</string>
    <string name="home_add">Home Address</string>
    <string name="physicals_genetics"><![CDATA[Physicals & Genetics]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="full_name">Full Name</string>
    <string name="home_work_add">Home or Work Address</string>
    <string name="relationship">Relationship</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remarks">Remarks</string>
    <string name="doc_pic_desc">consultation doctor profile picture</string>
    <string name="hori_options">Horizontal more button</string>
    <string name="to">to</string>
    <string name="consult_type">Consultation type</string>
    <string name="booking_no">Booking No:</string>
    <string name="add_appt">Add Appointment</string>
    <string name="pick_spec_lbl">Choose Specialty</string>
    <string name="view_all">View All</string>
    <string name="pick_doc_lbl">Choose Doctor</string>
    <string name="select_date">Select Date</string>
    <string name="time_pick_lbl">Choose Time</string>
    <string name="pick_conslt_lbl">Choose Consultation Type</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="mm_mtn">MTN Mobile Money</string>
    <string name="mm_airtigo">AirtelTigo Money</string>
    <string name="mm_voda">Vodafone Cash</string>
    <string name="pick_mm_lbl">Choose Mobile Money Type</string>
    <string name="mm_numb_lbl">Mobile Money Number</string>
    <string name="service_fee_gh">Service Fee (GH¢)</string>
    <string name="appt_make_lbl">Make Appointments</string>
    <string name="previous_button">Previous Button</string>
    <string name="sum_appt_text">Summary of Appointment</string>
    <string name="book_numb_lbl">Booking Number:</string>
    <string name="patient">Patient:</string>
    <string name="spec_txt">Specialty</string>
    <string name="doc_txt">Doctor</string>
    <string name="date_txt">Date</string>
    <string name="time_txt">Time</string>
    <string name="mm_type">Mobile Money Type</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="review">Review</string>
    <string name="languages">Languages</string>
    <string name="specialities">Specialities</string>
    <string name="facility_affiliation">Facility Affiliation</string>
    <string name="accomplishments">Accomplishments</string>
    <string name="skills">Skills</string>
    <string name="certificates">Certificates</string>
    <string name="awards">Awards</string>
    <string name="pat_care">Patient Care -</string>
    <string name="video">Video</string>
    <string name="review_topic_title">You are currently reviewing</string>
    <string name="doc_pro_txt">Doctor Profile</string>
    <string name="type_a_message">Type a Message</string>
    <string name="ov_complaints_txt">Complaints</string>
    <string name="ov_diagnosis_txt">Diagnoses</string>
    <string name="ov_exams_txt">Exam Findings</string>
    <string name="ov_prescriptions_txt">Prescriptions</string>
    <string name="choose_answer">Choose Answer…</string>
    <string name="general_comment">Please add your general comment here</string>
    <string name="whatsup_doc">"What do you think about the doctor\'s"</string>
    <string name="rev_lowest">Unacceptable</string>
    <string name="rev_low">Improvement Needed</string>
    <string name="rev_medium">Meets Expectation</string>
    <string name="rev_high">Exceeds Expectations</string>
    <string name="rev_highest">Exceptional</string>
    <string name="select_ans">Select Answer</string>
    <string name="appt_type">Appointment Type</string>
    <string name="appt_physical">Physical</string>
    <string name="appt_virtual">Virtual</string>
    <string name="physical_desc_text"><b><u>Physical:</u></b> Consult in person with any of our doctors at any of our facilities.</string>
    <string name="virtual_desc_text"><b><u>Virtual:</u></b> Have an online consultation from the comfort of your home or office.</string>
    <string name="pick_fac_lbl">Choose Facility</string>
    <string name="nchs_logo">New crystal hospital Logo</string>
    <string name="tank_u_note">Thank you for registering.</string>
    <string name="patient_id">Patient ID:</string>
    <string name="nchs_moto">Growing together in good health</string>
    <string name="promo_text">Visit any of our Service Centers below to receive a <u><b>50%</b></u> discount on all medical consultations</string>
    <string name="centers_label">Our Service Centers</string>
    <string name="get_directions">Get Directions</string>
    <string name="patient_id_lbl">Patient ID</string>
    <string name="nearest_facility_lbl">Nearest Facility</string>
    <string name="gender_lbl">Gender</string>
    <string name="profile_settings_txt">Profile Settings</string>
    <string name="opdcard_qn_txt">Do you already have an O.P.D. Card from any of our facilities?</string>
    <string name="opd_format">O.P.D Number (XXXXXXX-XX)</string>
    <string name="registration_facility">Registration Facility</string>
    <string name="search">Search</string>
</resources>