<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rb_lowest"
        android:text="@string/rev_lowest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioButton
        android:id="@+id/rb_low"
        android:text="@string/rev_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioButton
        android:id="@+id/rb_medium"
        android:text="@string/rev_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioButton
        android:id="@+id/rb_high"
        android:text="@string/rev_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioButton
        android:id="@+id/rb_highest"
        android:text="@string/rev_highest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RadioGroup>