<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/tv_reset_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_reset"
        android:textAlignment="center"
        android:textColor="@color/blue_black"
        android:textSize="@dimen/largest_text"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reset_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/reset_intro"
        android:textAlignment="center"
        android:textColor="@color/blue_black"
        android:textSize="@dimen/large_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_title" />

    <TextView
        android:id="@+id/tv_reset_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/reset_action"
        app:layout_constraintLeft_toLeftOf="@id/tv_reset_intro"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_intro" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintLeft_toLeftOf="@id/tv_reset_intro"
        app:layout_constraintTop_toBottomOf="@id/tv_reset_action">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_reset_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textSize="@dimen/med_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_reset_send"
        style="@style/app_buttons_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_med"
        android:drawableStart="@drawable/ic_arrow_forward_white_24dp"
        android:text="@string/send"
        app:layout_constraintRight_toRightOf="@id/input_reset_email"
        app:layout_constraintTop_toBottomOf="@id/input_reset_email" />


</androidx.constraintlayout.widget.ConstraintLayout>